# open-prime-hunters-rando

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yml
src/open_prime_hunters_rando/: __init__.py  __main__.py  add_entities.py  arm9.py  cli.py  common.py  constants.py  entity_data.py  entity_patching.py  escape_sequence_patches.py  file_manager.py  hunter_spawn_patches.py  level_data.py  logger.py  overlays.py  patch_util.py  pickup.py  pickups.py  prime_hunters_patcher.py  pyproject.toml  static_patches.py  version_checking.py
src/open_prime_hunters_rando/__pyinstaller/: __init__.py  hook-open_prime_hunters_rando.py
src/open_prime_hunters_rando/asm/patches/: missile_launcher.s  nothing.s
src/open_prime_hunters_rando/entities/: adapters.py  door.py  entity.py  entity_data.py  entity_file.py  entity_patching.py  entity_type.py  entity_type_class_mapping.py  enum.py  force_field.py  get_entity.py  pickup.py  portal.py  teleporter.py  vec.py
src/open_prime_hunters_rando/entities/entity_types/: area_volume.py  artifact.py  camera_sequence.py  defense_node.py  door.py  enemy_spawn.py  flag_base.py  force_field.py  item_spawn.py  jump_pad.py  light_source.py  morph_camera.py  object.py  octolith_flag.py  platform.py  player_spawn.py  point_module.py  teleporter.py  trigger_volume.py  volume_type.py
src/open_prime_hunters_rando/files/: schema.json
src/open_prime_hunters_rando/files/asm_patches/: reordered_instructions.s
src/open_prime_hunters_rando/frontend/: metroidhunters_text.py
src/open_prime_hunters_rando/parsing/: construct_extensions.py  file_manager.py  level_data.py
src/open_prime_hunters_rando/patching/: escape_sequence_patches.py  game_version.py  hunter_spawn_patches.py  rom_data.py  state_bits.py  static_patches.py  string_tables_patches.py  text_patches.py  version_checking.py
src/open_prime_hunters_rando/string_tables/: hints.py  string_tables.py  string_tables_patches.py
tests/: conftest.py  test_arm_add_bytes.py  test_asm.py  test_camera_sequences.py  test_construct_extensions.py  test_entity.py  test_state_bits.py  test_string_tables.py  test_text_files.py
tests/test_files/: starter_preset_patcher.json
tools/: README.md  create_asm_patches.py  export_rdv_database.py
tools/asm_sources/: ammo_per_expansion.s  ammo_refill.s  cloak_base_case.s  door_locking_condition.s  enemy_hunter_spawns.s  energy_cap.s  hud_up_cloak_base.s  hud_up_weapon_unlocked_case_2.s  missile_launcher.s  nothing.s  random_hunter_spawns.s  required_octoliths.s  starting_ammo.s  starting_missiles.s  story_save_wipe.s
(+83 files in other folders)
